<resources>
    <string name="app_name">Lesson4_Alarm_clock</string>
    <string name="display_time">Display Time</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="su">Su</string>
    <string name="sa">Sa</string>
    <string name="repeats">Repeats:</string>
    <string name="new_alarm">New Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="delete">Delete</string>
    <string name="name_app">Alarm</string>
    <string name="no_alarm_text">No Alarms</string>
    <string name="alarmimage">alarmImage</string>
    <string name="image">image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="count">Count</string>
    <string name="h">h</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="m">m</string>
    <string name="ss">SS</string>
    <string name="s">s</string>
</resources>
