<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context="com.example.boss.lesson4_alarm_clock.fragment.TimerFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <com.example.boss.lesson4_alarm_clock.CircularSeekBar
            android:id="@+id/circularSeekBar"
            android:layout_width="250dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:clickable="true"
                android:id="@+id/textHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:text="@string/hh"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/h"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/textMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:text="@string/mm"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/m"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/textSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:text="@string/ss"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:text="@string/s"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </FrameLayout>


</RelativeLayout>
