<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDark"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.boss.lesson4_alarm_clock.fragment.AlarmFragment">


    <LinearLayout
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:theme="@style/AppTheme.ButtonBeige"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_alarm"
            android:id="@+id/btnDeleteAlarm" />

        <Button
            android:theme="@style/AppTheme.ButtonDarkBeige"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_alarm"
            android:id="@+id/btnNewAlarm" />

        <Button
            android:layout_weight="1"
            android:visibility="gone"
            android:theme="@style/AppTheme.ButtonBeige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancelMain" />

        <Button
            android:layout_weight="1"
            android:visibility="gone"
            android:theme="@style/AppTheme.ButtonDarkBeige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btnDeleteChecked" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout" />

    <ImageView
        android:visibility="visible"
        android:src="@drawable/alarm_clock"
        android:layout_width="@dimen/image_scale_size"
        android:layout_height="@dimen/image_scale_size"
        android:id="@+id/imageAlarmAnimation"
        android:layout_marginTop="116dp"
        android:layout_alignTop="@+id/listView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image" />

    <TextView
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_text_no_alarm"
        android:textColor="@color/colorWhite"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_alarm_text"
        android:id="@+id/noAlarmText"
        android:layout_below="@+id/imageAlarmAnimation"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false" />

</RelativeLayout>
